small fix to about page spacing, adding arrow png

--- a/static/base.css
+++ b/static/base.css
@@ -220,7 +220,7 @@ body {
 
 /* ABOUT PAGE */
 .about-div {
-  padding-top: 5rem;
+  padding-top: 6rem;
   background-image: url(aboutbackground.png);
 }
 .jumbotron-about {
